adv4000/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  replicas: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: adv-project
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adv-project
    spec:
      containers:
        - name: adv-project
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "200m"
#          volumeMounts:
#            - name: adv4000-storage
#              mountPath: /var/lib/mysql
#      volumes:
#        - name: adv4000-storage
#          persistentVolumeClaim:
#            claimName: adv4000-pvc
