adv4000/deploy_and_volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ewb-deployment-autoscaling-1
  labels:
    app: my-k8s-application
    env: prod
    owner: adminevgvac
spec:
  replicas: 29
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name: mossad-web
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: image-store
              mountPath: /mnt/test
    volumes:
      - name: adv4000-store
        persistentVolumeClaim:
          claimName: cephfs-pvc
          readOnly: false
