adv4000/pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: adv-project
spec:
    containers:
        - name: adv-project
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "5m"
            limits:
              memory: "16Mi"
              cpu: "10m"
