adv4000/project.yml
apiVersion: v1
kind: Pod
metadata:
    name: my-web
spec:
    containers:
        - name: container-apache
          image: nginx:stable
          ports:
            - containerPort: 80
