adv4000/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  selector:
    app.kubernetes.io/name: adv-project
  ports:
    - port: 80
      targetPort: 80
