adv4000/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adv-project
spec:
#  tls:
#  - hosts:
#    - k8s.kronshtadt.ru
#    secretName: k8s
  rules:
    - host: adv4000.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: adv-project
                port:
                  number: 80
            path: /
