adv4000/service-loadbalancer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adv-project
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adv-project
    spec:
      containers:
        - name: adv-project
          image: gcr.io/google-samples/node-hello:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  selector:
    app.kubernetes.io/name: adv-project
  ports:
    - port: 80
      targetPort: 80
#  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adv-project
            port: 80
