adv4000/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adv-mysql
  labels:
    app.kubernetes.io/name: adv-mysql
spec:
  replicas: 3
  serviceName: adv-mysql
  selector:
    matchLabels:
      app.kubernetes.io/name: adv-project
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adv-project
    spec:
      containers:
        - name: adv-project
          image: dcksv-linux-repo.kronshtadt.ru:5000/adv4000-k8sphp:version2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: adv4000-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: adv4000-storage
          persistentVolumeClaim:
            claimName: adv4000-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: adv-project
  labels:
    app.kubernetes.io/name: adv-project
spec:
  selector:
    app.kubernetes.io/name: adv-project
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adv-project
spec:
  tls:
  - hosts:
    - k8s.kronshtadt.ru
    secretName: k8s
  rules:
    - host: k8s.kronshtadt.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: adv-project
                port:
                  number: 80
            path: /
